Reimplement Listener with pthreads.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,8 +8,15 @@ add_executable(cvim main.cpp)
 #     ${NEOVIM_EXEC} --api-msgpack-metadata | ${CMAKE_BINARY_DIR}/src/neovimgen ${CMAKE_CURRENT_SOURCE_DIR}/auto/ 
 #     DEPENDS neovimgen
 # )
+find_package (Threads)
 
 set(NEOVIM_CURSED_SOURCES Socket.cpp)
+
 add_library(Socket Socket.cpp)
 add_library(NeoServer NeoServer.cpp)
-target_link_libraries(cvim ${MSGPACK_LIBRARIES} Socket NeoServer)
+
+target_link_libraries( cvim 
+                       ${MSGPACK_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT}
+                       Socket NeoServer
+                     )
+target_link_libraries(cvim )
