Initial commit: Cursed Vim.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,21 +1,14 @@
 # add_executable(neovimgen neovimgen.cpp)
 add_executable(vsh vim-shell.cpp)
-# set_target_properties(neovimgen PROPERTIES COMPILE_FLAGS -DNEOVIM_NO_AUTO=1)
-# target_link_libraries(neovimgen ${MSGPACK_LIBRARIES})
+add_executable(cvim cursed.cpp)
 
-# add_custom_target(
-#     neovim_auto
-#     ${NEOVIM_EXEC} --api-msgpack-metadata | ${CMAKE_BINARY_DIR}/src/neovimgen ${CMAKE_CURRENT_SOURCE_DIR}/auto/ 
-#     DEPENDS neovimgen
-# )
 find_package (Threads)
-
-set(NEOVIM_SHELL_SOURCES Socket.cpp)
+find_package (Curses)
 
 add_library(Socket Socket.cpp)
 add_library(NeoServer NeoServer.cpp)
 
-target_link_libraries( vsh
-                       ${MSGPACK_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT}
-                       Socket NeoServer
-                     )
+target_link_libraries(NeoServer ${CMAKE_THREAD_LIBS_INIT} ${MSGPACK_LIBRARIES})
+
+target_link_libraries(vsh  Socket NeoServer)
+target_link_libraries(cvim Socket NeoServer ${CURSES_CURSES_LIBRARY})
